--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-/* Estilo para a lista de cursos */
-ul li a:hover {
-    background-color: #f2f2f2;
+ul li a {
+    background-color: transparent; /* Cor normal do link */
 }
+
+ul li a:hover {
+    background-color: #f2f2f2; /* Cor ao passar o mouse */
+}
+
 
 /* Estilo para o parágrafo */
 p {
