--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,16 @@
 /* Estado normal do link */
 ul li a {
     background-color: transparent;
-    color: black; /* Cor padrão aqui */
-}
-
-/* Link já visitado */
-ul li a:visited {
-    background-color: transparent;
-    color: black; /* Mesmo estilo para link visitado */
+    color: black; /* Cor padrão */
+    text-decoration: none; /* Remove o sublinhado, se não quiser */
 }
 
 /* Link ao passar o mouse */
 ul li a:hover {
     background-color: #f2f2f2; /* Cor de fundo ao passar o mouse */
-    color: blue; /* Mudar a cor do texto ao passar o mouse */
+    color: blue; /* Cor do texto ao passar o mouse */
 }
 
-/* Link ativo (ao clicar) */
-ul li a:active {
-    background-color: #e0e0e0; /* Opcional: cor ao clicar no link */
-}
 
 /* Estilo para o parágrafo */
 p {
